# registro

./: .env.example  .gitignore  CLAUDE.md  README.md  composer.json  docker-compose.test.yml  docker-compose.yml  docker-stack.yml  package-lock.json  package.json  server_deploy.sh  webpack.mix.js
api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 20260619_0001_saas_foundation.py  20260619_0002_legacy_core.py  20260620_0003_fiscal_requests.py  20260620_0004_fiscal_requests_title_desc.py  20260620_0005_legacy_id_nullable.py  20260620_0006_rename_aero_v1_slug.py  20260620_0007_audit_events.py  20260620_0008_fiscal_tracking.py  20260620_0009_module_records.py  20260620_0010_user_phone.py  20260620_0011_company_settings.py  20260620_0012_notify_user_ids.py  20260620_0013_notifications.py  20260620_0014_module_records_legacy.py  20260620_0015_sla_timezone.py  20260620_0016_attachments.py  20260620_0017_schema_audit.py  20260620_0018_seed_permissions.py  20260620_0019_occurrence_participants.py  20260620_0020_meetings.py  20260620_0021_migrate_reunioes_data.py  20260620_0022_shift_reports.py  20260620_0023_migrate_relatorios_turno_data.py  20260620_0024_notification_preferences.py  20260620_0025_asaas_fields.py  20260620_0026_webhook_events.py  20260620_0027_inspections_construction.py  20260620_0028_migrate_inspections_data.py  20260620_0029_rls_policies.py  20260621_0030_remigrate_module_records.py  20260621_0031_legacy_id_meetings_shift_reports.py  20260621_0032_maintenance_bulletin_tables.py  20260621_0033_migrate_maintenance_data.py  20260621_0034_shift_report_fields.py  20260621_0035_work_orders.py  20260621_0036_preventive_checklists.py  20260621_0037_stock_handoff.py  20260621_0038_user_extended_fields.py  20260621_0039_seed_hotel_roles.py
api/app/: __init__.py  import_v1.py  main.py  seed.py
api/app/core/: audit.py  auth.py  cache.py  config.py  database.py  dependencies.py  export.py  logging.py  pagination.py  permissions.py  rate_limit.py  security.py  sla.py  storage.py  validators.py
api/app/domain/: __init__.py
api/app/domain/apartment_inspections/: router.py  schemas.py  service.py
api/app/domain/attachments/: router.py  schemas.py  service.py
api/app/domain/audit_reports/: router.py  schemas.py  service.py
api/app/domain/auth/: __init__.py  repository.py  router.py  schemas.py  service.py
api/app/domain/bulletin/: router.py  schemas.py  service.py
api/app/domain/check_suites/: router.py  schemas.py  service.py
api/app/domain/checklists/: router.py  schemas.py  service.py
api/app/domain/dashboard/: router.py  service.py
api/app/domain/fiscal_requests/: router.py  schemas.py  service.py
api/app/domain/handoffs/: router.py  schemas.py  service.py
api/app/domain/health/: __init__.py  router.py
api/app/domain/inspection_suites/: router.py  schemas.py  service.py
api/app/domain/maintenance/: router.py  schemas.py  service.py
api/app/domain/meetings/: pdf.py  router.py  schemas.py  service.py
api/app/domain/modules/: router.py  service.py
api/app/domain/notifications/: router.py  schemas.py  service.py
api/app/domain/occurrences/: __init__.py  pdf.py  router.py  schemas.py  service.py
api/app/domain/platform/: __init__.py  router.py  (+4 more)
api/app/integrations/: asaas.py  brevo.py  evolution.py  notifications.py
api/app/models/: __init__.py  base.py  identity.py  operations.py  platform.py
api/scripts/: migrate_v1_attachments.py
api/tests/: conftest.py  test_attachments.py  test_audit.py  test_auth_service.py  test_background_notifications.py  test_bulletin.py  test_cache.py  test_checklists.py  test_chess_integration.py  test_config.py  test_cross_tenant.py  test_cross_tenant_crud.py  test_dashboard.py  test_export.py  test_fiscal_requests.py  test_handoffs.py  test_health.py  test_maintenance.py  test_meetings.py  test_negative_paths.py  test_notifications.py  test_occurrences.py  test_pagination.py  test_permissions.py  test_preventive_plans.py  test_procedures.py  test_roles.py  test_security.py  test_shift_reports.py  test_sla.py  test_stock.py  test_storage_service.py  test_users.py  test_validators.py  test_work_orders.py
(+742 files in other folders)
