[project]
name = "registro-api"
version = "0.1.0"
description = "API do Registro"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "bcrypt>=5.0,<6",
  "cryptography>=46.0.6,<47",
  "fastapi>=0.115,<1",
  "PyJWT>=2.13,<3",
  "pydantic-settings>=2.6,<3",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "structlog>=24.4,<26",
  "uvicorn[standard]>=0.32,<1",
  "boto3>=1.38,<2",
  "python-multipart>=0.0.20,<1",
  "redis[hiredis]>=5.0,<6",
  "slowapi>=0.1.9,<1",
  "reportlab>=4.2,<5",
  "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
mysql-import = [
  "asyncmy>=0.2.10,<1",
]
dev = [
  "aiosqlite>=0.20,<1",
  "httpx>=0.28,<1",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=6.0,<7",
  "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
cache_dir = "/tmp/.mypy_cache"
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
plugins = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
