[project]
name = "registro-api"
version = "0.1.0"
description = "API do Registro"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "bcrypt>=5.0,<6",
  "cryptography>=46.0.6,<47",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "PyJWT>=2.13,<3",
  "pydantic-settings>=2.6,<3",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "structlog>=24.4,<26",
  "uvicorn[standard]>=0.32,<1",
  "boto3>=1.38,<2",
  "python-multipart>=0.0.20,<1",
  "redis[hiredis]>=5.0,<6",
  "slowapi>=0.1.9,<1",
  "reportlab>=4.2,<5",
  "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
mysql-import = [
  "asyncmy>=0.2.10,<1",
]
dev = [
  "aiosqlite>=0.20,<1",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=6.0,<7",
  "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.mypy]
cache_dir = "/tmp/.mypy_cache"
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
plugins = []

# Incremental baseline for pre-existing typing debt. Keep this list explicit so
# new modules remain fully checked and entries can be removed as they are fixed.
[[tool.mypy.overrides]]
module = [
  "app.core.cache",
  "app.domain.apartment_inspections.service",
  "app.domain.attachments.service",
  "app.domain.audit_reports.service",
  "app.domain.bulletin.service",
  "app.domain.check_suites.service",
  "app.domain.checklists.service",
  "app.domain.dashboard.service",
  "app.domain.fiscal_requests.router",
  "app.domain.fiscal_requests.service",
  "app.domain.handoffs.service",
  "app.domain.health.router",
  "app.domain.inspection_suites.service",
  "app.domain.maintenance.service",
  "app.domain.meetings.service",
  "app.domain.modules.service",
  "app.domain.occurrences.service",
  "app.domain.platform.router",
  "app.domain.platform.service",
  "app.domain.preventive_plans.service",
  "app.domain.registries.router",
  "app.domain.registries.service",
  "app.domain.roles.service",
  "app.domain.settings.router",
  "app.domain.shift_reports.service",
  "app.domain.stock.service",
  "app.domain.users.service",
  "app.domain.work_diaries.service",
  "app.domain.work_orders.router",
  "app.domain.work_orders.service",
  "app.integrations.asaas",
  "app.integrations.brevo",
  "app.integrations.evolution",
  "app.main",
]
ignore_errors = true

[tool.coverage.run]
omit = [
  "app/import_v1.py",
  "app/seed.py",
  "app/domain/meetings/pdf.py",
  "app/domain/occurrences/pdf.py",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
